--- a/blocks/places/place/place.css
+++ b/blocks/places/place/place.css
@@ -1,8 +1,9 @@
 .place {
     max-width: 984px;
     max-height: 660px;
-    margin: 0;
+    margin: 80px 0 0;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
 }
+
