--- a/blocks/header/__lang-link/header___lang-link.css
+++ b/blocks/header/__lang-link/header___lang-link.css
@@ -1,7 +1,17 @@
 .header__lang-link {
+    max-width: 30px;
+    max-height: 28px;
+    font-family: Inter;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
-    line-height: 28px;
+    line-height: 28px; 
+    text-align: right;
+    text-decoration-line: underline;
     color: #FFFFFF;
+    margin: 18px 0 0 931px;
+}
+
+.header__lang-link:last-child {
+    margin-left: 18px;
 }
