--- a/blocks/places/place/__link/place__link.css
+++ b/blocks/places/place/__link/place__link.css
@@ -9,3 +9,8 @@
     text-decoration-line: underline;
     color: #FFFFFF;
 }
+
+.place__link:hover {
+    transition-duration: 1s;
+    opacity: 0.8;
+}
