--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,12 +1,10 @@
 .cover__overlay {
-    position: absolute;
-    width: 1184px;
-    height: 740px;
-    top: 1px;
-    left: 1px;
-    z-index: 1;
-    background: #2A2C2F;
-    opacity: 0.3;
+    background-color: rgba(42, 44, 47, 0.3);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .cover__overlay:hover {
