--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,16 +1,13 @@
 .cover__subtitle {
-    position: absolute;
-    width: 360px;
-    height: 66px;
-    left: 412px;
-    top: 429px;
-    margin-top: 32px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 22px;
-    text-align: center;
-    color: #FFFFFF;
-    z-index: 2;
+  margin: 0;
+  margin-top: 32px;
+  font-size: 18px;
+  line-height: 22px;
+  max-width: 360px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  text-align: center;
+  color: #FFFFFF;
+  
 }
