--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,17 +1,15 @@
 .cover__title {
-    position: absolute;
-    width: 560px;
-    height: 152px;
-    top: 245px;
-    left: 312px;
-    margin: 0;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 72px;
-    line-height: 76px;
-    text-align: center;
-    color: #FFFFFF;
-    text-decoration: none;
-    z-index: 2;
+  text-align: center;
+  font-size: 72px;
+  line-height: 76px;
+  max-width: 560px;
+  font-weight: bold;
+  margin: 0;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 76px;
+  text-align: center;
+  color: #FFFFFF; 
 }
