--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,9 @@
 .cover {
-    width: 1184px;
+    width: 90%;
+    margin: auto;
+    margin-top: 92px;
+    background-image: url(../../images/__background.png);
+    background-repeat: no-repeat;
+    background-size: cover ;
     height: 740px;
-    margin: 92px 48px 0;
-    position: relative;
-}
+  }
