--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,6 +1,7 @@
 .cover__overlay {
     background-color: rgba(42, 44, 47, 0.3);
-    height: 100%;
+    width: 1184px;
+    height: 740px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -10,4 +11,23 @@
 .cover__overlay:hover {
     transition-duration: 2s;
     opacity: 0.8;
+}
+
+@media all and (max-width:1024px) {
+    .cover__overlay {
+        width: 1024px;
+        height: 640px;
+    }
+}
+@media all and (max-width:768px) {
+    .cover__overlay {
+        width: 768px;
+        height: 480px;
+    }
+}
+@media all and (max-width:320px) {
+    .cover__overlay {
+        width: 320px;
+        height: 200px;
+    }
 }
