--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -9,5 +9,12 @@
   font-weight: normal;
   text-align: center;
   color: #FFFFFF;
-  
+}
+
+
+@media all and (max-width:320px) {
+.cover__subtitle {
+  font-size: 14px;
+  line-height: 16px;
+}
 }
