--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -3,13 +3,16 @@
   font-size: 72px;
   line-height: 76px;
   max-width: 560px;
-  font-weight: bold;
   margin: 0;
   font-family: Inter;
   font-style: normal;
   font-weight: 900;
-  font-size: 72px;
-  line-height: 76px;
-  text-align: center;
   color: #FFFFFF; 
+}
+
+@media all and (max-width:320px) {
+  .cover__title {
+    font-size: 32px;
+    line-height: 35px;
+  }
 }
