--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,9 +1,28 @@
 .cover {
-    width: 90%;
-    margin: auto;
-    margin-top: 92px;
-    background-image: url(../../images/__background.png);
-    background-repeat: no-repeat;
-    background-size: cover ;
+    width: 1184px;
     height: 740px;
+    margin: 92px 48px 0;
+    background-image: url(../../images/__background.png); 
   }
+
+  @media all and (max-width:1024px) {
+    .cover {
+      margin: 92px 0 0;
+      width: 1024px;
+      height: 640px;
+    }
+}
+@media all and (max-width:768px) {
+    .cover {
+      margin: 90px 0 0;
+      width: 768px;
+      height: 480px;
+    }
+}
+@media all and (max-width:320px) {
+    .cover {
+      margin: 66px 0 0;
+      width: 320px;
+      height: 200px;
+    }
+}
