--- a/blocks/header/__lang-link/header___lang-link.css
+++ b/blocks/header/__lang-link/header___lang-link.css
@@ -1,6 +1,5 @@
 .header__lang-link {
     max-width: 30px;
-    max-height: 28px;
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
@@ -14,4 +13,20 @@
 
 .header__lang-link:last-child {
     margin-left: 18px;
+}
+
+@media all and (max-width: 1024px) {
+    .header__lang-link {
+        margin-left: 675px;
+    }
+}
+@media all and (max-width: 768px) {
+    .header__lang-link {
+        margin-left: 467px;
+    }
+}
+@media all and (max-width: 320px) {
+    .header__lang-link {
+        margin-left: 84px;
+    }
 }
