--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,3 +3,14 @@
     padding: 28px 48px 0px;
     display: flex;
 }
+
+@media all and (min-width: 768px) and (max-width: 1024px) {
+    .header {
+        max-width: 928px;
+    }
+}
+@media all and (max-width: 768px) {
+    .header {
+       max-width: 100%;
+    }
+}
