--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,8 +1,6 @@
 .intro__list {
-    width: 690px;
-    height: 90px;
     list-style: none;
-    margin: 33px auto 0;
+    margin: 33px 0 0;
     padding: 0;
     font-family: Inter;
     font-style: normal;
@@ -10,4 +8,10 @@
     font-size: 12px;
     line-height: 18px;
     color: #FFFFFF;
+}
+
+@media all and (max-width: 320px){
+    .intro__list {
+        margin-top: 34px;
+    }
 }
