--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,6 +1,4 @@
 .intro__title {
-    max-width: 690px;
-    max-height: 58px;
     margin: 0;
     font-family: Inter;
     font-style: normal;
@@ -8,4 +6,11 @@
     font-size: 54px;
     line-height: 58px;
     color: #FFFFFF; 
+}
+
+@media all and (max-width: 320px) {
+    .intro__title {
+        font-size: 32px;
+        line-height: 35px;
+    }
 }
