--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,8 +1,30 @@
 .intro {
     max-width: 690px;
-    max-height: 429px;
-    margin: 114px 442px 0 148px;
+    margin: 114px auto 0 148px;
     display: flex;
     flex-direction: column;
     
 }
+
+@media all and (max-width:1024px) {
+    .intro {
+        margin-top: 110px auto 0 48px;
+        max-width: 720px;
+    }
+}
+
+@media all and (max-width:768px) {
+    .intro {
+        margin: 110px 24px 0 ;
+        max-width: 720px;
+    }
+}
+
+@media all and (max-width:320px) {
+    .intro {
+        margin-top: 86px;
+        max-width: 288px;
+        margin: 86px 16px 0;
+    }
+}
+
