--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,6 +1,4 @@
 .lead__caption {
-    max-width: 158px;
-    max-height: 14px;
     margin: 8px 0 0;
     font-family: Inter;
     font-weight: normal;
@@ -10,4 +8,16 @@
     text-transform: uppercase;
     letter-spacing: 0.15em;
     color: #FFFFFF;
+}
+
+
+@media all and (min-width: 425px) and (max-width: 768px){
+    .lead__caption {
+        margin-left: 24px;
+    }
+}
+@media all and (max-width: 320px){
+    .lead__caption {
+        margin-left: 16px;
+    }
 }
