--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,4 @@
 .lead__subtitle {
-    max-width: 640px;
-    max-height: 72px;
     margin: 32px auto 0;
     justify-content: center;
     font-family: Inter;
@@ -10,4 +8,25 @@
     line-height: 36px;
     text-align: center;
     color: #FFFFFF;
+}
+
+@media all and (max-width: 1024px) {
+    .lead__subtitle{
+        max-width: 640px;
+        margin: 32px 192px 0 ;
+    }
+}
+
+@media all and (max-width: 768px) {
+    .lead__subtitle{
+        max-width: 640px;
+        margin: 32px 64px 0 ;
+    }
+}
+
+@media all and (max-width: 320px) {
+    .lead__subtitle{
+        max-width: 640px;
+        margin: 16px 16px 0 ;
+    }
 }
