--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -11,3 +11,21 @@
     text-align: center;
     color: #FFFFFF;
 }
+
+@media all and (max-width: 768px) {
+    .lead__title {
+        max-width: 720px;
+        font-size: 96px;
+        line-height: 100px;
+        margin: 48px 24px 0;
+    }
+}
+
+@media all and (max-width: 320px) {
+    .lead__title {
+        max-width: 288px;
+        font-size: 40px;
+        line-height: 44px;
+        margin: 48px 16px 0;
+    }
+}
