--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,8 +1,28 @@
 .lead {
     max-width: 984px;
-    max-height: 1005px;
     margin: 56px 148px 0px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+@media all and (max-width: 1024px) {
+    .lead {
+        max-width: 928px;
+        margin: 48px 48px 0px;
+    }
+}
+@media all and (max-width: 768px) {
+    .lead {
+       max-width: 100%;
+       margin: 48px 0 0;
+    }
+}
+
+@media all and (max-width: 230px) {
+    .lead {
+       max-width: 100%;
+       margin: 48 0 0;
+
+    }
 }
