--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,9 +1,34 @@
 .photo-grid {
     max-width: 1148px;
-    max-height: 671px;
     margin: 92px 48px 0;
     display: grid;
     grid-template-columns: repeat(4, 284px);
     grid-template-rows: repeat(3, 213px);
     gap: 16px;
+}
+
+@media all and (max-width:1024px) {
+    .photo-grid {
+        grid-template-columns: repeat(3, 300px);
+        grid-template-rows: repeat(4, 225px);
+        gap: 14px;
+    }
+}
+
+@media all and (max-width:768px) {
+    .photo-grid {
+        grid-template-columns: repeat(2, 352px);
+        grid-template-rows: repeat(6, 264px);
+        gap: 16px;
+        margin: 88px 24px 0;
+    }
+}
+
+@media all and (max-width:320px) {
+    .photo-grid {
+        grid-template-columns: repeat(1, 288px);
+        grid-template-rows: repeat(12, 216px);
+        column-gap: 12px;
+        margin: 64px 16px 0;
+    }
 }
