--- a/blocks/places/place/__paragraph/place__paragraph.css
+++ b/blocks/places/place/__paragraph/place__paragraph.css
@@ -1,6 +1,6 @@
 .place__paragraph {
     width: 484px;
-    margin: 48px auto 0 40px;
+    margin: 48px auto 0 0;
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
@@ -12,3 +12,22 @@
 .place__paragraph:last-child {
     margin-top: 26px;
 }
+
+@media all and (max-width:1024px) {
+    .place__paragraph {
+         max-width: 456px;
+    }
+  }
+  
+  @media all and (max-width:768px) {
+    .place__paragraph {
+        max-width: 352px;
+    }
+  }
+  
+  @media all and (max-width:320px) {
+    .place__paragraph {
+        max-width: 288px;
+        font-size: 16px;
+    }
+  }
