--- a/blocks/places/place/__website/place__website.css
+++ b/blocks/places/place/__website/place__website.css
@@ -1,4 +1,17 @@
 .place__website {
     max-width: 456px;
-    margin: 50px auto 0 40px;
+    margin: 50px auto 0 0px;
 }
+
+  
+  @media all and (max-width:768px) {
+    .place__website {
+        max-width: 352px;
+    }
+  }
+  
+  @media all and (max-width:320px) {
+    .place__website {
+        max-width: 288px;
+    }
+  }
