--- a/blocks/places/place/place.css
+++ b/blocks/places/place/place.css
@@ -1,9 +1,29 @@
 .place {
-    max-width: 984px;
     max-height: 660px;
-    margin: 80px 0 0;
+    margin: 0 0 80px 0;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
 }
 
+.place:last-child {
+    margin-bottom: 0;
+}
+
+@media all and (max-width:1024px) {
+    .place {
+      max-height: 640px;
+    }
+  }
+  
+  @media all and (max-width:768px) {
+    .place {
+        max-height: 581px;
+    }
+  }
+  
+  @media all and (max-width:320px) {
+    .place {
+        max-height: 965px;
+    }
+  }
