--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,6 +1,27 @@
 .places {
   max-width: 984px;
-  margin: 0 148px 0;
+  margin: 92px 148px 0;
   display: flex;
   flex-direction: column;
+}
+
+@media all and (max-width:1024px) {
+  .places {
+    max-width: 928px;
+    margin: 92px 48px 0;
+  }
+}
+
+@media all and (max-width:768px) {
+  .places {
+    max-width: 720px;
+    margin: 88px 24px 0;
+  }
+}
+
+@media all and (max-width:320px) {
+  .places {
+    max-width: 320px;
+    margin: 64px 0 0;
+  }
 }
