--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -15,19 +15,19 @@
 
 @media all and (max-width:1024px) {
     .cover__overlay {
-        width: 1024px;
+        width: 100%;
         height: 640px;
     }
 }
 @media all and (max-width:768px) {
     .cover__overlay {
-        width: 768px;
+        width: 100%;
         height: 480px;
     }
 }
 @media all and (max-width:320px) {
     .cover__overlay {
-        width: 320px;
+        width: 100%;
         height: 200px;
     }
 }
