--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -8,21 +8,21 @@
   @media all and (max-width:1024px) {
     .cover {
       margin: 92px 0 0;
-      width: 1024px;
+      width: 100%;
       height: 640px;
     }
 }
 @media all and (max-width:768px) {
     .cover {
       margin: 90px 0 0;
-      width: 768px;
+      width: 100%;
       height: 480px;
     }
 }
 @media all and (max-width:320px) {
     .cover {
       margin: 66px 0 0;
-      width: 320px;
+      width: 100%;
       height: 200px;
     }
 }
