--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,4 +4,7 @@
     margin: 92px 48px 0;
     padding-bottom: 24px;
     display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
+
