--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,6 +2,7 @@
     max-width: 1184px;
     padding: 28px 48px 0px;
     display: flex;
+    justify-content: space-between;
 }
 
 @media all and (min-width: 768px) and (max-width: 1024px) {
