--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -8,3 +8,14 @@
     margin: 0 18px 0 0;
     text-decoration: none;
 }
+
+.footer__link:nth-child(5n) {
+    margin-right: 0;
+}
+
+@media all and (max-width:320px) {
+    .footer__link {
+        font-size: 24px;
+        line-height: 24px;
+    }
+}
