--- a/blocks/places/place/__paragraph/place__paragraph.css
+++ b/blocks/places/place/__paragraph/place__paragraph.css
@@ -22,6 +22,7 @@
   @media all and (max-width:768px) {
     .place__paragraph {
         max-width: 352px;
+        font-size: 16px;
     }
   }
   
