--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -15,3 +15,9 @@
        max-width: 100%;
     }
 }
+@media all and (max-width: 320px) {
+    .header {
+       max-width: 100%;
+       padding: 16px 16px 0;
+    }
+}
