--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -27,6 +27,8 @@
 @media all and (max-width: 320px) {
     .lead__subtitle{
         max-width: 640px;
+        font-size: 16px;
+        line-height: 20px;
         margin: 16px 16px 0;
     }
 }
