--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,3 +1,9 @@
 .photo-grid__item {
     width: 100%;
 }
+
+@media all and (max-width:320px) {
+    .photo-grid__item {
+        max-width: 95%;
+    }
+}
