--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -4,7 +4,7 @@
     align-items: center;
 }
 
-@media all and (max-width:320px) {
+@media all and (min-width:320px) and (max-width:767px) {
     .header__lang-links {
         margin-top: 14px;
     }
