--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,3 +2,10 @@
     max-width: 176px;
     max-height: 52px;
 }
+
+@media all and (min-width:320px) and (max-width:767px) {
+    .header__logo {
+        width: 142px;
+        height: 42px;
+    }
+}
