--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,19 +6,20 @@
     justify-content: space-between;
 }
 
-@media all and (min-width: 768px) and (max-width: 1024px) {
+@media all and (min-width:1024px) and (max-width:1279px) {
     .header {
         max-width: 928px;
     }
 }
-@media all and (max-width: 768px) {
+
+@media all and (min-width:768px) and (max-width:1023px) {
     .header {
        max-width: 720px;
     }
 }
-@media all and (max-width: 320px) {
+
+@media all and (min-width:320px) and  (max-width:767) {
     .header {
-       max-width: 288px;
-       
+       max-width: 288px; 
     }
 }
