--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,4 +1,5 @@
 .lead__caption {
+    align-self: flex-start;
     margin: 8px 0 0;
     font-family: Inter;
     font-weight: normal;
@@ -11,12 +12,12 @@
 }
 
 
-@media all and (min-width: 425px) and (max-width: 768px){
+@media all and (min-width: 768px) and (max-width: 1023px){
     .lead__caption {
         margin-left: 24px;
     }
 }
-@media all and (max-width: 320px){
+@media all and (min-width: 320px) and (max-width: 767px) {
     .lead__caption {
         margin-left: 16px;
     }
