--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,4 +1,5 @@
 .lead__subtitle {
+    max-width: 640px;
     margin: 32px auto 0;
     justify-content: center;
     font-family: Inter;
@@ -10,25 +11,11 @@
     color: #FFFFFF;
 }
 
-@media all and (max-width: 1024px) {
+@media all and (max-width: 320px) and (max-width: 767px) {
     .lead__subtitle{
-        max-width: 640px;
-        margin: 32px 192px 0;
-    }
-}
-
-@media all and (max-width: 768px) {
-    .lead__subtitle{
-        max-width: 640px;
-        margin: 32px 64px 0;
-    }
-}
-
-@media all and (max-width: 320px) {
-    .lead__subtitle{
-        max-width: 640px;
+        max-width: 288px;
         font-size: 16px;
         line-height: 20px;
-        margin: 16px 16px 0;
+        margin: 16px auto 0;
     }
 }
