--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,7 +1,7 @@
 .lead__title {
     max-width: 720px;
     display: flex;
-    margin: 0 132px;
+    margin: 0;
     justify-content: center;
     font-family: Inter;
     font-style: normal;
@@ -12,20 +12,11 @@
     color: #FFFFFF;
 }
 
-@media all and (max-width: 768px) {
-    .lead__title {
-        max-width: 720px;
-        font-size: 96px;
-        line-height: 100px;
-        margin: 48px 24px 0;
-    }
-}
-
-@media all and (max-width: 320px) {
+@media all and (min-width: 320px) and (max-width:767px) {
     .lead__title {
         max-width: 288px;
         font-size: 40px;
         line-height: 44px;
-        margin: 48px 16px 0;
+        margin: 48px auto 0;
     }
 }
