--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -13,19 +13,19 @@
     opacity: 0.8;
 }
 
-@media all and (max-width:1024px) {
+@media all and (min-width: 1024px) and (max-width:1279px) {
     .cover__overlay {
         width: 100%;
         height: 640px;
     }
 }
-@media all and (max-width:768px) {
+@media all and (min-width: 768px) and (max-width:1023px) {
     .cover__overlay {
         width: 100%;
         height: 480px;
     }
 }
-@media all and (max-width:320px) {
+@media all and (min-width: 320px) and (max-width: 767px) {
     .cover__overlay {
         width: 100%;
         height: 200px;
