--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -12,9 +12,9 @@
 }
 
 
-@media all and (max-width:320px) {
+@media all and (min-width: 320px) and (max-width: 767px) {
 .cover__subtitle {
   font-size: 14px;
   line-height: 16px;
-}
+  }
 }
