--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -11,7 +11,7 @@
   text-decoration: none;
 }
 
-@media all and (max-width:320px) {
+@media all and (min-width: 320px) and (max-width: 767px) {
   .cover__title {
     font-size: 32px;
     line-height: 35px;
