--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -7,14 +7,21 @@
     flex-wrap: wrap;
 }
 
-@media all and (max-width:768px) {
+@media all and (min-width: 1024px) and (max-width:1279px){
     .footer {
-        margin: 88px auto 0;
-        width: 90%;
+        max-width: 928px;
     }
 }
 
-@media all and (max-width:320px) {
+
+@media all and (min-width: 768px) and (max-width:1023px) {
+    .footer {
+        margin: 88px auto 0;
+        width: 720px;
+    }
+}
+
+@media all and (min-width: 320px) and (max-width: 767px) {
     .footer {
         margin-left: 16px;
         max-width: 186px;
