--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,6 +1,6 @@
 .intro__title {
     margin: 0;
-    font-family: Inter;
+    font-family: 'Inter';
     font-style: normal;
     font-weight: 900;
     font-size: 54px;
@@ -8,7 +8,7 @@
     color: #FFFFFF; 
 }
 
-@media all and (max-width: 320px) {
+@media all and (min-width: 320px) and (max-width:767px) {
     .intro__title {
         font-size: 32px;
         line-height: 35px;
