--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,30 +1,21 @@
 .intro {
     max-width: 690px;
-    margin: 114px auto 0 100px;
+    margin: 114px auto 0;
     display: flex;
     flex-direction: column;
-    
 }
 
-@media all and (max-width:1024px) {
+@media all and (min-width:768px) and (max-width:1023px) {
     .intro {
         margin-top: 110px auto 0;
         max-width: 720px;
     }
 }
 
-@media all and (max-width:768px) {
+@media all and (min-width:320px) and (max-width:767px) {
     .intro {
-        margin: 110px auto 0;
-        max-width: 720px;
-    }
-}
-
-@media all and (max-width:320px) {
-    .intro {
-        margin-top: 86px;
         max-width: 288px;
-        margin: 86px auto 0;
+        margin: 64px auto 0;
     }
 }
 
