--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -16,7 +16,7 @@
     }
 }
 
-@media all and (max-width: 320px) and (min-width: 767px) {
+@media all and (min-width: 320px) and (max-width: 767px) {
     .lead__image {
         width: 320px;
     }
