--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -11,7 +11,7 @@
     color: #FFFFFF;
 }
 
-@media all and (max-width: 320px) and (max-width: 767px) {
+@media all and (min-width: 320px) and (max-width: 767px) {
     .lead__subtitle{
         max-width: 288px;
         font-size: 16px;
