--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -7,7 +7,7 @@
     gap: 16px;
 }
 
-@media all and (max-width:1024px) {
+@media all and (min-width: 1024px) and (max-width:1279px) {
     .photo-grid {
         grid-template-columns: repeat(3, 300px);
         grid-template-rows: repeat(4, 225px);
@@ -15,7 +15,7 @@
     }
 }
 
-@media all and (max-width:768px) {
+@media all and (min-width: 768px) and (max-width:1023px) {
     .photo-grid {
         grid-template-columns: repeat(2, 352px);
         grid-template-rows: repeat(6, 264px);
@@ -24,7 +24,7 @@
     }
 }
 
-@media all and (max-width:320px) {
+@media all and (min-width: 320px) and (max-width: 767px) {
     .photo-grid {
         grid-template-columns: repeat(1, 288px);
         grid-template-rows: repeat(12, 216px);
