--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -4,26 +4,23 @@
     margin: 48px 40px 0 0;
 }
 
-@media all and (max-width:1024px) {
+@media all and (min-width: 1024px) and (max-width:1279px) {
     .place__image {
-      max-height: 440px;
       max-width: 440px;
       margin: 48px 32px 0 0px;
     }
   }
   
-  @media all and (max-width:768px) {
+@media all and (min-width: 768px) and (max-width:1023px) {
     .place__image {
-        max-height: 340px;
         max-width: 340px;
         margin: 48px 28px 0 0px;
     }
   }
   
-  @media all and (max-width:320px) {
+@media all and (min-width: 320px) and (max-width: 767px) {
     .place__image {
-        max-height: 100%;
-        max-width: 100%;
+        max-width: 320px;
         margin: 32px 0 0;
     }
   }
