--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,3 +1,4 @@
+
 .place__link {
     width: 456px;
     margin: 12px auto 0;
@@ -13,4 +14,16 @@
 .place__link:hover {
     transition-duration: 1s;
     opacity: 0.8;
+}
+
+@media all and (min-width: 768px) and (max-width:1023px) {
+    .place__link{
+        width: 352px;
+    }
+}
+
+@media all and (min-width: 320px) and (max-width: 767px) {
+    .place__link {
+        width: 288px;
+    }
 }
