--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -13,23 +13,22 @@
     margin-top: 26px;
 }
 
-@media all and (max-width:1024px) {
+@media all and (min-width: 1024px) and (max-width:1279px) {
     .place__paragraph {
-         max-width: 456px;
+        max-width: 456px;
     }
   }
   
-  @media all and (max-width:768px) {
+  @media all and (min-width: 768px) and (max-width:1023px) {
     .place__paragraph {
         max-width: 352px;
         font-size: 16px;
     }
   }
   
-  @media all and (max-width:320px) {
+@media all and (min-width: 320px) and (max-width: 767px) {
     .place__paragraph {
         max-width: 288px;
-        font-size: 16px;
         margin: 32px auto 0;
     }
   }
