--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -9,17 +9,26 @@
     color: #FFFFFF;
 }
 
-  @media all and (max-width:768px) {
-    .place__title {
-        font-size: 42px;
-        line-height: 46px;
-    }
-  }
   
-  @media all and (max-width:320px) {
-    .place__title {
-        font-size: 32px;
-        line-height: 35px;
-        margin: 0 16px 0;
-    }
+@media all and (min-width: 1024px) and (max-width:1279px) {
+  .place__title {
+    max-width: 440px;
   }
+}
+
+@media all and (min-width: 768px) and (max-width:1023px) {
+  .place__title {
+    max-width: 340px;
+    font-size: 42px;
+    line-height: 46px;
+  }
+}
+
+@media all and (min-width: 320px) and (max-width: 767px) {
+  .place__title {
+    max-width: 288px;
+    margin-left: 16px;
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
