--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -9,3 +9,15 @@
     letter-spacing: 0.2em;
     color: #AAAAAA;
 }
+
+@media all and (min-width: 768px) and (max-width:1023px) {
+    .place__url-heading {
+        width: 352px;
+    }
+}
+
+@media all and (min-width: 320px) and (max-width: 767px) {
+    .place__url-heading {
+        width: 288px;
+    }
+}
