--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,25 +1,24 @@
 .places {
   max-width: 984px;
-  margin: 92px auto 0 100px;
+  margin: 92px auto 0;
   display: flex;
   flex-direction: column;
 }
 
-@media all and (max-width:1024px) {
+@media all and (min-width: 1024px) and (max-width:1279px) {
   .places {
     max-width: 928px;
-    margin: 92px auto 0;
   }
 }
 
-@media all and (max-width:768px) {
+@media all and (min-width: 768px) and (max-width:1023px) {
   .places {
     max-width: 720px;
-    margin: 88px 24px 0;
+    margin: 88px auto 0;
   }
 }
 
-@media all and (max-width:320px) {
+@media all and (min-width: 320px) and (max-width: 767px) {
   .places {
     max-width: 320px;
     margin: 64px auto 0;
