--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,29 +1,30 @@
 .cover {
     width: 1184px;
+    height: 740px;
     margin: 92px auto 0;
     background-image: url(../../images/__background.png);
     background-size: contain;
     background-repeat: no-repeat;
   }
 
-  @media all and (max-width:1024px) {
-    .cover {
-      margin: 92px auto 0;
-      width: 100%;
-      
+@media all and (min-width: 1024px) and (max-width:1279px) {
+  .cover {
+    margin: 92px auto 0;
+    width: 100%;
+    height: 640px;
     }
 }
-@media all and (max-width:768px) {
-    .cover {
-      margin: 90px auto 0;
-      width: 100%;
-      height: 480px;
+@media all and (min-width: 768px) and (max-width:1023px) {
+  .cover {
+    margin: 90px auto 0;
+    width: 100%;
+    height: 480px;
     }
 }
-@media all and (max-width:320px) {
-    .cover {
-      margin: 66px auto 0;
-      width: 100%;
-      height: 200px;
+@media all and (min-width: 320px) and (max-width: 767px) {
+  .cover {
+    margin: 66px auto 0;
+    width: 100%;
+    height: 200px;
     }
 }
