--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,4 +1,9 @@
 .footer__links {
     display: flex;
-    flex-direction: column;
+}
+
+@media all and (min-width: 320px) and (max-width: 767px) {
+    .footer__links {
+        flex-direction: column;
+    }
 }
