--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,4 +1,5 @@
 .place {
+    width: 984px;
     max-height: 660px;
     margin: 0 0 80px 0;
     display: flex;
@@ -13,17 +14,20 @@
 @media all and (min-width: 1024px) and (max-width:1279px) {
     .place {
       max-height: 640px;
+      width: 928px;
     }
 }
   
 @media all and (min-width: 768px) and (max-width:1023px) {
     .place {
         max-height: 581px;
+        width: 720px;
     }
 }
   
 @media all and (min-width: 320px) and (max-width: 767px) {
     .place {
+        width: 288px;
         max-height: none;
         flex-wrap: nowrap;
     }
