--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,6 @@
 .intro {
     max-width: 690px;
-    margin: 114px auto 0;
+    margin: 114px auto 0 100px;
     display: flex;
     flex-direction: column;
 }
