--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -20,6 +20,7 @@
   
 @media all and (min-width: 320px) and (max-width: 767px) {
     .place__image {
+        order: 3;
         max-width: 320px;
         margin: 32px 0 0;
     }
