--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -28,6 +28,7 @@
   
 @media all and (min-width: 320px) and (max-width: 767px) {
     .place__paragraph {
+        order: 4;
         max-width: 288px;
         margin: 32px auto 0;
     }
