--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -26,6 +26,7 @@
 
 @media all and (min-width: 320px) and (max-width: 767px) {
   .place__title {
+    order: 1;
     max-width: 288px;
     margin-left: 16px;
     font-size: 32px;
