--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -12,7 +12,8 @@
   
   @media all and (max-width:320px) {
     .place__website {
-        max-width: 288px;
-        margin: 32px 16px 0;
+      order: 2;
+      max-width: 288px;
+      margin: 32px 16px 0;
     }
   }
