--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,7 +2,7 @@
     width: 1184px;
     height: 740px;
     margin: 92px auto 0;
-    background-image: url(../../images/__background.png);
+    background-image: url(../../images/cover-trains.jpg);
     background-size: contain;
     background-repeat: no-repeat;
   }
