--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -18,7 +18,7 @@
     }
 }
 
-@media all and (min-width:320px) and  (max-width:767) {
+@media all and (min-width:320px) and  (max-width:767px) {
     .header {
        max-width: 288px; 
     }
