--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -7,7 +7,7 @@
 
 @media all and (min-width:768px) and (max-width:1023px) {
     .intro {
-        margin-top: 110px auto 0;
+        margin: 110px auto 0;
         max-width: 720px;
     }
 }
