--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -18,6 +18,7 @@
 
 @media all and (min-width: 768px) and (max-width:1023px) {
   .place__title {
+    order: 1;
     max-width: 340px;
     font-size: 42px;
     line-height: 46px;
