--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -4,14 +4,15 @@
 }
 
   
-  @media all and (max-width:768px) {
-    .place__website {
-        max-width: 352px;
+@media all and (min-width: 768px) and (max-width:1023px) {
+  .place__website {
+      order: 3;
+      max-width: 352px;
     }
   }
   
-  @media all and (max-width:320px) {
-    .place__website {
+@media all and (min-width: 320px) and (max-width: 767px) {
+  .place__website {
       order: 2;
       max-width: 288px;
       margin: 32px 16px 0;
