--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,6 @@
 .cover {
     width: 1184px;
-    height: 740px;
+    min-height: 740px;
     margin: 92px auto 0;
     background-image: url(../../images/cover-trains.jpg);
     background-size: contain;
@@ -9,7 +9,6 @@
 
 @media all and (min-width: 1024px) and (max-width:1279px) {
   .cover {
-    margin: 92px auto 0;
     width: 100%;
     height: 640px;
     }
@@ -17,14 +16,12 @@
 @media all and (min-width: 768px) and (max-width:1023px) {
   .cover {
     margin: 90px auto 0;
-    width: 100%;
-    height: 480px;
+    min-height: 480px;
     }
 }
 @media all and (min-width: 320px) and (max-width: 767px) {
   .cover {
     margin: 66px auto 0;
-    width: 100%;
-    height: 200px;
+    min-height: 200px;
     }
 }
