--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -3,10 +3,15 @@
     margin: 64px auto 0;
 }
 
+@media all and (min-width: 768px) and (max-width:1279px) {
+    .lead__image {
+        margin-top: 56px;
+    }
+}
+
 @media all and (min-width: 1024px) and (max-width:1279px) {
     .lead__image {
         width: 928px;
-        margin-top: 56px;
     }
 }
 
@@ -19,5 +24,6 @@
 @media all and (min-width: 320px) and (max-width: 767px) {
     .lead__image {
         width: 320px;
+        margin-top: 46px;
     }
 }
