--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -17,6 +17,6 @@
         max-width: 288px;
         font-size: 40px;
         line-height: 44px;
-        margin: 48px auto 0;
+        margin: 0 auto;
     }
 }
