--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -7,6 +7,12 @@
     align-items: center;
 }
 
+@media all and (max-width: 1279px) {
+    .lead {
+        margin: 48px auto 0px;
+    }
+}
+
 @media all and (min-width: 1024px) and (max-width: 1279px) {
     .lead {
         max-width: 928px;
@@ -16,12 +22,10 @@
 @media all and (min-width: 768px) and (max-width: 1023px) {
     .lead {
        max-width: 768px;
-       margin: 48px auto 0;
     }
 }
 @media all and (min-width: 230px) and (max-width: 767px) {
     .lead {
        max-width: 320px;
-       margin: 48px auto 0;
     }
 }
