--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,6 +1,6 @@
 .place__paragraph {
     width: 484px;
-    margin: 48px auto 0;
+    margin: 0px auto 26px;
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
@@ -10,7 +10,7 @@
 }
 
 .place__paragraph:last-child {
-    margin-top: 26px;
+    margin-bottom: 0;
 }
 
 @media all and (min-width: 1024px) and (max-width:1279px) {
@@ -21,7 +21,6 @@
   
   @media all and (min-width: 768px) and (max-width:1023px) {
     .place__paragraph {
-        order: 4;
         max-width: 352px;
         font-size: 16px;
     }
@@ -29,8 +28,6 @@
   
 @media all and (min-width: 320px) and (max-width: 767px) {
     .place__paragraph {
-        order: 4;
         max-width: 288px;
-        margin: 32px auto 0;
     }
   }
