--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,20 +1,20 @@
 .place__website {
     max-width: 456px;
-    margin: 50px auto 0 0px;
+    display: flex;
+    flex-direction: column;
+    align-self: end;
 }
 
   
 @media all and (min-width: 768px) and (max-width:1023px) {
   .place__website {
-      order: 3;
       max-width: 352px;
     }
   }
   
 @media all and (min-width: 320px) and (max-width: 767px) {
   .place__website {
-      order: 2;
       max-width: 288px;
-      margin: 32px 16px 0;
+      margin-left: 16px;
     }
   }
