--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,34 +1,30 @@
 .place {
-    width: 984px;
-    max-height: 660px;
-    margin: 0 0 80px 0;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-}
-
-.place:last-child {
-    margin-bottom: 0;
+    display: grid;
+    grid-template-columns: 460px 484px;
+    grid-template-rows: repeat(2, min-content);
+    max-width: 984px;
+    margin: 0 auto 80px;
+    gap: 48px 40px;
 }
 
 @media all and (min-width: 1024px) and (max-width:1279px) {
     .place {
-      max-height: 640px;
-      width: 928px;
+      grid-template-columns: 440px 456px;
+      max-width: 928px;
+      gap: 48px 32px;
     }
 }
   
 @media all and (min-width: 768px) and (max-width:1023px) {
     .place {
-        max-height: 581px;
-        width: 720px;
+        grid-template-columns: 340px 352px;
+        max-width: 720px;
+        gap: 48px 28px;
     }
 }
   
 @media all and (min-width: 320px) and (max-width: 767px) {
     .place {
-        width: 288px;
-        max-height: none;
-        flex-wrap: nowrap;
+        grid-template-columns: 320px;
     }
 }
