--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -23,6 +23,7 @@
 
 @media all and (min-width: 320px) and (max-width: 767px) {
     .footer {
+        width: 184px;
         margin-left: 16px;
         margin-top: 64px;
     }
