--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -10,14 +10,14 @@
 
 .footer__link:hover {
     transition-duration: 1s;
-    opacity: 0.3;
+    opacity: 0.8;
 }
 
 .footer__link:nth-child(5n) {
     margin-right: 0;
 }
 
-@media all and (min-width:320px) and (max-width: 764px) {
+@media all and (max-width: 764px) {
     .footer__link {
         margin-bottom: 32px;
     }
@@ -27,6 +27,5 @@
     .footer__link {
         font-size: 24px;
         line-height: 24px;
-        margin-bottom: 32px;
     }
 }
