--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -24,7 +24,12 @@
 @media all and (min-width: 320px) and (max-width: 767px) {
     .footer {
         width: 186px;
-        margin-left: 16px;
         margin-top: 64px;
+    }
+}
+
+@media all and (max-width:320px) {
+    .footer {
+        margin-left: 16px;
     }
 }
