--- a/blocks/header/__lang-link/header___lang-link.css
+++ b/blocks/header/__lang-link/header___lang-link.css
@@ -1,13 +1,17 @@
 .header__lang-link {
-    max-width: 30px;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
     line-height: 28px;
     text-align: right;
-    text-decoration-line: underline;
+    text-decoration: none;
     color: #FFFFFF;
    
+}
+
+.header__lang-link:hover {
+    transition-duration: 1s;
+    opacity: 0.8;
 }
 
 .header__lang-link:last-child {
