--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -18,15 +18,21 @@
     }
   }
   
-  @media all and (min-width: 768px) and (max-width:1023px) {
+@media all and (max-width:1023px) {
+    .place__paragraph {
+        font-size: 16px;
+    }
+}
+
+@media all and (min-width: 768px) and (max-width:1023px) {
     .place__paragraph {
         max-width: 352px;
-        font-size: 16px;
     }
   }
   
 @media all and (min-width: 320px) and (max-width: 767px) {
     .place__paragraph {
+
         max-width: 288px;
     }
   }
