--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -30,5 +30,6 @@
 @media all and (min-width: 320px) and (max-width: 767px) {
     .place {
         grid-template-columns: 320px;
+        margin-bottom: 64px;
     }
 }
